# ksp-cfg-formatter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
benches/: sock.rs
cli_app/: Cargo.toml
ksp-cfg-formatter/: Cargo.toml
ksp-cfg-formatter/benches/: parser_benchmark.rs
ksp-cfg-formatter/src/: grammar.pest  lib.rs  printer.rs  reader.rs  wasm_bindings.rs
ksp-cfg-formatter/src/linter/: document.rs  has.rs  key_val.rs  mod.rs  node.rs
ksp-cfg-formatter/src/parser/: assignment_operator.rs  comment.rs  document.rs  has.rs  indices.rs  key_val.rs  mod.rs  needs.rs  node.rs  node_item.rs  operator.rs  parser_helpers.rs  pass.rs  path.rs
ksp-cfg-formatter/src/parser/nom/: mod.rs  utils.rs
ksp-cfg-formatter/src/printer/: assignment_operator.rs  comment.rs  document.rs  has.rs  indices.rs  key_val.rs  needs.rs  node.rs  operator.rs  pass.rs  path.rs
ksp-cfg-formatter/src/transformer/: assignment_padding.rs  assignments_first.rs  mod.rs
ksp-cfg-formatter/tests/: RO_RN_Cygnus.cfg  bad_formatting.rs  comment_after_keyval.cfg  correct_files.rs  error_files.rs  expected_errors.rs  incorrect_files.rs  nodes_above_keys.cfg  one_line_nodes.cfg  simple.cfg  wildcards.cfg
ksp-cfg-formatter/tests/bad_formatting/: comment_after_id.cfg  empty_has_key_value.cfg  empty_node_name_and_id.cfg  index_before_needs.cfg  space_at_eof.cfg
ksp-cfg-formatter/tests/expected_errors/: missing_closing_bracket.cfg
ksp-cfg-formatter/tests/incorrect_files/: trailing_spaces_input.cfg  trailing_spaces_output.cfg
ksp-cfg-formatter/tests/weird_configs/: comments_in_empty_nodes.cfg  multiple_equal_signs.cfg  weird_index_selection.cfg
lsp-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
lsp-extension/lsp-rs/: Cargo.toml
lsp-extension/lsp-rs/src/: main.rs  utils.rs
lsp-extension/lsp-rs/src/notifications/: handlers.rs
lsp-extension/lsp-rs/src/requests/: handlers.rs  mod.rs
lsp-rs/: Cargo.toml
lsp-rs/src/: main.rs  utils.rs
lsp-rs/src/linter/: document.rs  has.rs  key_val.rs  mod.rs  node.rs
lsp-rs/src/notifications/: handlers.rs  mod.rs
lsp-rs/src/requests/: handlers.rs  mod.rs
parser/: Cargo.toml
pkg/: ksp_cfg_formatter.d.ts  ksp_cfg_formatter.js  ksp_cfg_formatter_bg.wasm  ksp_cfg_formatter_bg.wasm.d.ts  package.json
src/: ast_formatter.rs  char_formatter.rs  lib.rs  main.rs  token_formatter.rs  wasm_bindings.rs
(+60 files in other folders)
