[package]
name = "ksp-cfg-formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
lazy_static = "1.4.0"
logos = "0.12.1"
pretty_assertions = "1.3.0"
proptest = "1.1.0"
regex = "1.7.1"
walkdir = "2.3.2"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "sock"
harness = false
