[package]
name = "ksp-cfg-formatter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.11.0"
nom = "7.1.3"
nom_locate = "4.2.0"
pretty_assertions = "1.3.0"
strsim = "0.10.0"
thiserror = "1.0.44"
walkdir = "2.3.2"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
