[package]
name = "lsp-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
lsp-server = "0.7.3"
lsp-types = "0.94.1"
serde = "1.0.171"
serde_json = "1.0.105"
ksp-cfg-formatter = { path = "../../ksp-cfg-formatter" }
log = "0.4.20"
stderrlog = "0.5.4"
url = "2.4.1"
log4rs = "1.2.0"
